brat/test/golden/imports/use-illegal-z3.brat.golden
Error in test/golden/imports/use-illegal-z3.brat on line 4:
main = x, y, z
             ^

  z not found in (value) environment

